# pyadi-dt

./: .bandit  .bandit-baseline.json  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  _toctree.html  access.html  board_class_workflow.html  cli.html  creating_templates.html  env_remote_all.yaml  env_remote_bq.yaml  env_remote_mini2.yaml  env_remote_nuc.yaml  examples.html  genindex.html  index.html  lg_fmcdaq3_zc706_tftp.yaml  mcp_server.html  mkdocs.yml  noxfile.py  objects.inv  parts.html  petalinux.html  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  setup.py  utils.html  visualization.html  xsa.html  xsa_developer.html
.github/: dependabot.yml  hw-nodes.json
.github/scripts/: create_debian.sh  install-adidt-venv.sh  postinstall.sh  register-hw-runners.sh  verify_install.sh
.github/workflows/: binding-audit.yml  build.yml  build_debian.yaml  build_pip.yml  doc.yml  hardware-test.yml  security.yml  test-kuiper.yml  test.yml  type-check.yml
_sources/: access.md.txt  cli.rst.txt  creating_templates.rst.txt  index.rst.txt  parts.md.txt  petalinux.rst.txt  quickstart.rst.txt  visualization.rst.txt  xsa.rst.txt  xsa_developer.rst.txt
_sources/api/: boards.rst.txt  core.rst.txt  devices.rst.txt  index.rst.txt  xsa.rst.txt
_sources/developer/: authoring_devices.rst.txt  hardware_ci.rst.txt  index.rst.txt  labgrid_exporter.rst.txt
_sources/examples/: ad9081_device_tree_generation.md.txt  xsa_ad9081_zcu102.md.txt
_static/: d2-theme-images.css
_static/viz/: ad9081_zcu102_wiring.dot
adidt/: __init__.py  _naming.py  _utils.py  clock.py  dt.py  mcp_server.py  sd.py  system.py
adidt/boards/: __init__.py  ad9081_fmc.py  ad9081_nv_sb_s10.py  ad9082_fmc.py  ad9083_fmc.py  ad9084_fmc.py  adrv9002_fmc.py  adrv9008_fmc.py  adrv9009_fmc.py  adrv9009_pcbz.py  adrv9009_zu11eg.py  adrv9025_fmc.py  adrv9361_z7035.py  adrv9364_z7020.py  adrv937x_fmc.py  adsy1100.py  daq2.py  fmcomms_fmc.py  layout.py  rpi.py
adidt/cli/: gen_dts.py  helpers.py  jif.py  main.py
adidt/devices/: __init__.py  _dt_render.py  _fields.py  base.py
adidt/eval/: __init__.py  ad9081_fmc.py  ad9084_fmc.py  adrv937x_fmc.py  base.py
adidt/fpga/: __init__.py  base.py  vpk180.py  zc706.py  zcu102.py
adidt/model/: __init__.py  board_model.py  components.py  contexts.py  renderer.py
adidt/parts/: __init__.py  ad9081.py  ad9523_1.py  ad9528.py  ad9545.py  adrv9009.py  clock_dt.py  hmc7044.py
adidt/templates/: ad9081_fmc_vpk180.tmpl  ad9081_fmc_zc706.tmpl  ad9081_fmc_zcu102.tmpl  ad9081_nv_sb_s10.tmpl  ad9084_fmc_vck190.tmpl  ad9084_fmc_vcu118.tmpl  ad9084_fmc_vpk180.tmpl  adi-adrv9009.dtsi  adrv9009_fmc_zc706.tmpl  adrv9009_fmc_zcu102.tmpl  adrv9009_zu11eg.dts  adsy1100_vu11p.tmpl  daq2.tmpl  daq2_frag.dts  daq2_zc706.tmpl  daq2_zcu102.tmpl  reference_dts_targets.json
adidt/tools/: __init__.py  dts_compare_cli.py  dts_inspect.py
adidt/utils/: profilewiz.py  tes.py
adidt/xsa/: __init__.py  adijif_fmcdaq3.py  board_configs.py  board_fixups.py  clock_graph.py  dts_lint.py  exceptions.py  kuiper.py  kuiper_boards.json  merger.py  node_builder.py  parity.py  pipeline.py  profiles.py  reference.py  sdtgen.py  template_contexts.py  topology.py  visualizer.py
api/: boards.html  core.html  devices.html  index.html  model.html  parts.html  templates.html  xsa.html
developer/: authoring_devices.html  hardware_ci.html  index.html  labgrid_exporter.html
doc/: Makefile
doc/source/: access.md  ad9081_device_tree_generation.md  api.rst  board_class_workflow.rst  cli.rst  conf.py  creating_templates.rst  examples.md  index.rst  mcp_server.rst  parts.md  petalinux.rst  quickstart.rst  utils.md  visualization.rst  xsa.rst  xsa_developer.rst
docker/: Dockerfile.petalinux  entrypoint.sh  run-petalinux-tests.sh
docs/: access.md  cli.md  index.md  parts.md  ref.md  utils.md  xsa_support_backlog.md
examples/: ad9081_device_tree_generation.html  ad9081_fmc_dts_gen.py  ad9081_fmc_zcu102.py  ad9084_fmc_vpk180.py  adsy1100_gen.py  board_model_usage.html  daq2_dts_gen.py  xsa_ad9081_zcu102.html  xsa_adijif_tutorial.html  xsa_tutorial.html
examples/xsa/: ad9081_zc706.py  ad9081_zcu102_xsa_parse.py  ad9082_zcu102.py  ad9083_zcu102.py  ad9172_zcu102.py  adrv9002_zc706.py  adrv9008_zc706.py  adrv9008_zcu102.py  adrv9009_zc706.py  adrv9009_zcu102.py  adrv9025_zcu102.py  adrv937x_zc706.py  adrv937x_zcu102.py  fmcdaq2_zc706.py  fmcdaq2_zcu102.py  fmcdaq3_zc706.py  fmcdaq3_zcu102.py
main/: 404.html  index.html  objects.inv  sitemap.xml
main/access/: index.html
main/cli/: index.html
main/parts/: index.html
main/ref/: index.html
main/search/: search_index.json
main/utils/: index.html
requirements/: requirements_dev.txt  requirements_doc.txt
scripts/: README.md  adi_binding_lib.py  audit_adi_bindings.py  collect_adi_bindings.py  embed_d3.py  generate_reference_targets.py
scripts/labgrid-exporter/: deploy.sh  install.sh  labgrid-exporter.service  labgrid-exporter@.service  nodes.conf.example
test/: boot_script.py  conftest.py  devicetree.dtb  dts_utils.py  test_adi_binding_lib.py  test_adis16495.py  test_adrv9009_zu11eg.py  test_adrv9361_z7035.py  test_adrv9364_z7020.py  test_board_layout_base.py  test_board_registry.py  test_cli_deps.py  test_cli_gen_dts.py  test_cli_jif.py  test_cli_kuiper_boards.py  test_cli_xsa.py  test_component_hierarchy.py  test_components.py  test_context_split.py  test_d2_diagram_backgrounds.py  test_dt.py  test_examples_xsa_smoke.py  test_hw_helpers.py  test_mcp_server.py  test_new_contexts.py  test_parts_cleanup.py  test_renderer.py  test_rpi.py  test_tes.py
test/ad9081/: __init__.py  test_ad9081_gen.py  test_ad9081_hmc7044.py  test_ad9081_nv_sb.py  test_ref.dts
test/ad9084/: 2023_R2.yaml  test_ad9084_gen.py  test_ad9084_hw.py  test_ad9084_hw_vcu118.py  test_ad9084_xsa_hw_vcu118.py
test/ad9523_1/: daq2_ad9523_1_zcu102.dtb  test_ad9523_1.py
test/ad9545/: rpi-ad9545-hmc7044.dtbo  test_ad9545.py
test/adrv9009/: Tx_BW200_IR245p76_Rx_BW200_OR245p76_ORx_BW200_OR245p76_DC245p76.txt  adrv9009_ad9528.dtb  (+5 more)
(+352 files in other folders)
